<resources>
    <string name="app_name">Kashif Aqua Farm</string>
</resources>
